# wkbl-stats

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  eslint.config.js  index.html  nixpacks.toml  package-lock.json  package.json  playwright.config.js  pre-commit-config.yaml  pyproject.toml  render.yaml  requirements.txt  server.py  vitest.config.js
.github/: dependabot.yml
data/: prediction_params.json  sample.json  wkbl-active.json  wkbl-core.db  wkbl.db
docs/: advanced-stats-display-plan.md  advanced-stats-plan.md  data-sources.md  e2e-coverage-guideline.md  e2e-playwright-plan.md  game-shotchart-plan.md  player-shotchart-plan.md  players-teams-leaders-fix-plan.md  prediction-accuracy-tdd-plan.md  project-roadmap.md  project-structure.md  refactor-plan.md  regression-checklist.md  sql-query-contract.md  static-hosting-troubleshooting.md  visualization-plan.md  win-shares-plan.md
src/: app.behavior.integration.test.js  app.js  db.integration.test.js  db.js  seasons.js  seasons.test.js  styles.css
tests/: __init__.py  conftest.py  test_api.py  test_database.py  test_e2e_coverage_report.py  test_frontend_contracts.py  test_frontend_static.py  test_ingest_db_init.py  test_ingest_fetch_functions.py  test_ingest_helpers.py  test_ingest_orchestration.py  test_ingest_predictions.py  test_ingest_save_to_db.py  test_ingest_schedule.py  test_lineup.py  test_parsers.py  test_possession_diff_report.py  test_predict.py  test_predict_backtest.py  test_refactor_p0.py  test_server.py  test_split_db.py  test_split_db_cli.py  test_stats.py  (+1 more)
(+112 files in other folders)
